# AgenticChatbot

./: mcp_client.py  mcp_client2.py  mcp_server.py  poc_test.ipynb  pyproject.toml
db_utilities/: mongo_implementation.py
